--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group-prepend">
-                        <div class="input-group-text">https://create-short-link.herokuapp.com/</div>
+                        <div class="input-group-text">https://weely1.herokuapp.com/</div>
                         <input type="text" name="short" class="form-control" placeholder="Short Char (6 chars)"
                             maxlength="6" id="short">
 
@@ -62,8 +62,8 @@
                         class="card-link">{{ u.original_url }}</a>
                 </p>
 
-                <p>Shorten : <a href="https://create-short-link.herokuapp.com/{{ u.short_query }}" target="_blank"
-                        class="card-link">https://create-short-link.herokuapp.com/{{ u.short_query }}</a></p>
+                <p>Shorten : <a href="https://weely1.herokuapp.com/{{ u.short_query }}" target="_blank"
+                        class="card-link">https://weely1.herokuapp.com/{{ u.short_query }}</a></p>
                 <div class="row justify-content-between">
                     <div class="col-6 col-sm-6 ">
                         <h3>Visits : {{ u.visits }} </h3>
