--- a/templates/home.html
+++ b/templates/home.html
@@ -24,12 +24,12 @@
     <p>Basically, when the URL shortener gives you your shortened URL, it &quot;remembers&quot; the full address. When other users go to the shortened URL, they will be automatically redirected to the full address.</p>
     <p>The webpage will still exist at the longer URL&mdash;the shortened URL is simply a <strong style="font-weight: 700;">shortcut</strong> to make the link easier to manage.</p>
     <h4 id="isPasted">Let&apos;s shorten a URL!</h4>
-    <p>Even if you&apos;ve never shortened a URL, it&apos;s very easy. We&apos;re going to use <a href="https://tinyurl.com/" target="_blank">&gt;URL_Shortner</a>, but the process will be similar when using other shortening services.</p>
+    <p>Even if you&apos;ve never shortened a URL, it&apos;s very easy. We&apos;re going to use <a href="https://weely1.herokuapp.com/" target="_blank">&gt;URL_Shortner</a>, but the process will be similar when using other shortening services.</p>
     <p>The basic process is to copy the long URL into the URL shortener, and it will give you a shorter URL. The exact steps are below:</p>
     <ol class="numbered-list">
         <li>Go to any website (you can use <a href="http://www.google.com/maps/place/Beasley's+Chicken+and+Honey/@35.777025,-78.638112,15z/data=!4m2!3m1!1s0x0:0x9ede9af11fda231a" target="_blank">this link</a> if you want). Websites with longer URLs are the best candidates for URL shortening, although any site will work.</li>
         <li>Select the URL in the address bar and copy it. You can use the keyboard shortcut <strong style="font-weight: 700;">Ctrl+C</strong>&nbsp; to copy it.</li>
-        <li>Go to <a href="http://127.0.0.1:8000/" rel="noopener noreferrer" target="_blank">urlShortner.com</a> and signup, click on <strong>Dashboard</strong> paste the URL into the space provided, using the keyboard shortcut <strong style="font-weight: 700;">Ctrl+V&nbsp;</strong>to paste it<strong style="font-weight: 700;">.</strong>&nbsp;</li>
+        <li>Go to <a href="https://weely1.herokuapp.com/" rel="noopener noreferrer" target="_blank">urlShortner.com</a> and signup, click on <strong>Dashboard</strong> paste the URL into the space provided, using the keyboard shortcut <strong style="font-weight: 700;">Ctrl+V&nbsp;</strong>to paste it<strong style="font-weight: 700;">.</strong>&nbsp;</li>
         <li>Click on <strong style="font-weight: 700;">Generate, </strong>shorten link will appear copy it and paste it in browser.</li>
         <li>The shortened URL will appear. You can then copy the new URL and paste it wherever you want!</li>
     </ol>
