--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
-  <title>Url Shortner</title>
+  <title>&#62;Url_Shortner</title>
   <style>
     body {
       font-family: 'Baloo Thambi 2', cursive;
