--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
     <ol class="numbered-list">
         <li>Go to any website (you can use <a href="http://www.google.com/maps/place/Beasley's+Chicken+and+Honey/@35.777025,-78.638112,15z/data=!4m2!3m1!1s0x0:0x9ede9af11fda231a" target="_blank">this link</a> if you want). Websites with longer URLs are the best candidates for URL shortening, although any site will work.</li>
         <li>Select the URL in the address bar and copy it. You can use the keyboard shortcut <strong style="font-weight: 700;">Ctrl+C</strong>&nbsp; to copy it.</li>
-        <li>Go to <a href="https://weely1.herokuapp.com/" rel="noopener noreferrer" target="_blank">URL Shortner</a> and signup, click on <strong>Dashboard</strong> paste the URL into the space provided, using the keyboard shortcut <strong style="font-weight: 700;">Ctrl+V&nbsp;</strong>to paste it<strong style="font-weight: 700;">.</strong>&nbsp;</li>
+        <li>Go to <a href="https://weely1.herokuapp.com/signup/" rel="noopener noreferrer" target="_blank">URL Shortner</a> and signup, click on <strong>Dashboard</strong> paste the URL into the space provided, using the keyboard shortcut <strong style="font-weight: 700;">Ctrl+V&nbsp;</strong>to paste it<strong style="font-weight: 700;">.</strong>&nbsp;</li>
         <li>Click on <strong style="font-weight: 700;">Generate, </strong>shorten link will appear copy it and paste it in browser.</li>
         <li>The shortened URL will appear. You can then copy the new URL and paste it wherever you want!</li>
     </ol>
